--- a/css/style.css
+++ b/css/style.css
@@ -389,3 +389,8 @@ table.focus-on tbody tr.focused td, table.focus-on tbody tr.focused th {
 .text-enlace{
   color: #fff;
 }
+label span 
+{
+  color: white;
+  font-size: 20px;
+}
